src/css/Menu.css
.scroll-link {
    text-decoration: none;
}

.button-underline {
    position: absolute;
    height: 100%;
    width: 0%;
    background-color: #021c37;
    transition: all 500ms ease-in-out;
    transform: translateX(50%);
    bottom: 0px;
    right: 50%;
    z-index: -1;
}

.navbar-light .navbar-toggler-icon {
    background-image: none !important;
}

.navbar {
    width: 100vw;
    background-color: steelblue;
    padding: 1rem;
    box-shadow: 0px 0px 10px black;
    opacity: 1;
}

.logo {
    height: 40px;
    cursor: pointer;
}

.navbar a {
    color: white;
    font-family: 'Montserrat', sans-serif;
}

.navbar-light .navbar-nav .nav-link {
    color: white !important;
    font-size: 1.1rem;
    position: relative;
    height: 100%;
    font-family: 'Montserrat', sans-serif;
}

.navbar-light .navbar-nav .nav-link:focus,
.navbar-light .navbar-nav .nav-link:active {
    outline: none;
}

.navbar-light .navbar-nav .nav-link:hover .button-underline {
    width: 100%;
}

.navbar-light .navbar-toggler {
    color: #021c37 !important;
    border-color: #021c37 !important;
    outline: none;
    transition: none;
}

.navbar-light .navbar-toggler:focus {
    box-shadow: none;
}

.navbar-light .navbar-toggler:active {
    outline: none;
    color: #021c37;
}

.navbar-light {
    color: orange;
}

@media only screen and (max-width: 990px) {
    .navbar-light .navbar-nav .nav-link {
        text-align: center;
        width: 100vw;
        margin-left: -16px;
    }

    .navbar-light .navbar-nav .nav-link:hover {
        background-color: #021c37;
        text-align: center;
    }

    .button-underline {
        display: none;
    }

    .first-link {
        margin-top: 0.71rem;
    }
}

